--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 body{
-background-color: orangered;
-}
+background-color: rgba(252, 121, 107, 0.623);
+color:rgb(109, 16, 16);
+font-family:Verdana, Geneva, Tahoma, sans-serif;
