ateramos a fonte do google

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 body{
 background-color: rgba(252, 121, 107, 0.623);
 color:rgb(109, 16, 16);
-font-family:Verdana, Geneva, Tahoma, sans-serif;
+font-family: "Josefin Sans", sans-serif;
+}
+header{
+    font-size: 65px;
+}
+h1{
+    font-size: 45px;
+}
