--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@ font-family: "Josefin Sans", sans-serif;
 }
 header{
     font-size: 65px;
+    border: dashed 5px rgb(125, 26, 26);
 }
 h1{
-    font-size: 45px;
+    font-size: 30px;
+}
+p{
+    font-size: 20px
+    
 }
