--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@ body{
 background-color: rgba(252, 121, 107, 0.623);
 color:rgb(109, 16, 16);
 font-family: "Josefin Sans", sans-serif;
+margin: 0px;
 }
 header{
     font-size: 65px;
-    border: dashed 5px rgb(125, 26, 26);
+    border-bottom: dashed 5px rgb(70, 6, 6);
+    text-align: center;
+    /*margin: 45px;*/
+    padding: 15px;
 }
 h1{
     font-size: 30px;
