--- a/style.css
+++ b/style.css
@@ -10,11 +10,19 @@ header{
     text-align: center;
     /*margin: 45px;*/
     padding: 15px;
+    color: rgb(77, 1, 1)
 }
 h1{
     font-size: 30px;
 }
 p{
     font-size: 20px
-    
+}
+
+section{
+background-color: rgb(181, 51, 51);
+padding-bottom: 80px;
+display: flex;
+justify-content: center;
+
 }
