--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-body{
-background-color: rgba(252, 121, 107, 0.623);
-color:rgb(109, 16, 16);
+ body{
+background-color: rgba(192, 246, 182, 0.851);
+color:rgb(3, 12, 0);
 font-family: "Josefin Sans", sans-serif;
 margin: 0px;
 }
 header{
     font-size: 65px;
-    border-bottom: dashed 5px rgb(70, 6, 6);
+    border-bottom: dashed 5px rgba(2, 9, 0, 0.955);
     text-align: center;
     /*margin: 45px;*/
     padding: 15px;
-    color: rgb(77, 1, 1)
+    color: rgba(1, 17, 11, 0.995)
 }
 h1{
     font-size: 30px;
@@ -20,9 +20,14 @@ p{
 }
 
 section{
-background-color: rgb(181, 51, 51);
+background-color: rgba(2, 78, 18, 0.88);
 padding-bottom: 80px;
 display: flex;
 justify-content: center;
+
+}
+
+.chamada-texto { 
+    margin-right: 10%;
 
 }
