--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ p{
     font-size: 20px
 }
 
-section{
+
+.chamada{
 background-color: rgba(2, 78, 18, 0.88);
 padding-bottom: 80px;
 display: flex;
@@ -29,5 +30,23 @@ justify-content: center;
 
 .chamada-texto { 
     margin-right: 10%;
+}
+img{
+width: 200px;
+height: 300px;
+}
 
+.Variosfilmesesériesdisponíveis!{
+display: flex;
+overflow-x: auto; 
+gap: 10px;
+padding-left: 20px;
+
+}
+
+h2{
+    padding-left: 30px;
+    body{
+        padding-bottom: 40px;
+    }
 }
